# WebScraperCPP

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  main.cpp
include/: IScrapedPage.h  IWebScraper.h  ScrapedPage.h  WebScraper.h  WebScraperException.h
src/: ScrapedPage.cpp  WebScraper.cpp
